Implements Banner component

--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,7 @@
       {
         "root": ["./"],
         "alias": {
-          "public": "./public",
+          "public": "./public"
         }
       }
     ]
