--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     ]
   },
   "dependencies": {
+    "@notionhq/client": "^0.2.4",
+    "formidable": "^1.2.2",
     "next": "10.2.2",
     "polished": "^4.1.3",
     "react": "17.0.2",
