--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "@notionhq/client": "^0.2.4",
     "formidable": "^1.2.2",
+    "i18next": "^20.6.1",
     "next": "10.2.2",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
