--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@notionhq/client": "^0.2.4",
     "formidable": "^1.2.2",
     "i18next": "^20.6.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-locize-backend": "^4.2.3",
     "next": "10.2.2",
     "polished": "^4.1.3",
     "react": "17.0.2",
