--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-locize-backend": "^4.2.3",
     "next": "10.2.2",
+    "next-i18next": "^8.7.0",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
